Updateted show.ejs
Added hide delete review button function if the user is not logged in and if the logged in user is not author of the review.

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -84,7 +84,12 @@
             <p class="card-text"><%= review.comment %></p>
         </div>
         <form class="mb-3 mt-2" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+            <% if(!(currUser)) { %>
+            <!-- <button class="btn btn-sm btn-dark">Delete</button> -->
+            <% } %>
+            <% if(currUser && review.author._id.equals(currUser._id)) { %>
             <button class="btn btn-sm btn-dark">Delete</button>
+            <% } %>
         </form>
     </div>
     <% } %>
