--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -33,8 +33,8 @@
           <a class="nav-link" href="/listings">Explore</a>
         </div>
         <div class="navbar-nav ms-auto">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2 search-input" type="search" placeholder="Search Destinatins..." aria-label="Search">
+          <form class="d-flex" role="search" method="get" action="/listings/search">
+            <input class="form-control me-2 search-input" name="category" type="search" placeholder="Search Destinatins..." aria-label="Search">
             <button class="btn search-btn" type="submit">Search</button>
           </form>
         </div>
