--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -9,6 +9,11 @@
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" />
         </div>
+
+        <div class="mb-3">
+            <label for="category" class="form-label">Category</label>
+            <input name="listing[category]" value="<%= listing.category %>" type="text" class="form-control" />
+        </div>
         
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
