--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,7 +10,14 @@
             <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required />
             <div class="valid-feedback">Title looks good!</div>
         <div class="invalid-feedback">Title should be valid.</div>
-        </div>        
+        </div>   
+
+        <div class="mb-3">
+            <label for="category" class="form-label">Enter Category</label>
+            <input name="listing[category]" placeholder="Add a category" type="text" class="form-control" required />
+            <div class="valid-feedback">Category feels good!</div>
+        <div class="invalid-feedback">Category should be valid.</div>
+        </div> 
 
         <div class="mb-3">
             <label for="description" class="form-label">Enter Description</label>
