--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,9 @@
         <img src="<%= listing.image.url %>" class="card-img-top show-image" alt="listing image">
         <div class="card-body mt-4">
             <p class="card-text">Owned By: <i><%= listing.owner.username %></i></p>
-                
+
+            <p class="card-text"><%= listing.category %></p> 
+
             <p class="card-text"><%= listing.description %></p>             
                  
             <p class="card-text">&#8377; <%= listing.price %></p>
